tests/snapshots/examples_fixtures/errors__module_scope_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/module_scope_error.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E025]: MODULE SCOPE

Module declaration must be at the top of the file.

  --> examples/errors/module_scope_error.flx:3:3
  |
3 |   module Inner {
  |   ^^^^^^^^^^^^^^
4 |     fn value() { 1; }
  | ^^^^^^^^^^^^^^^^^^^^^
5 |   }
  | ^^^

Hint:
  Move the module declaration before all other statements.
== stdout ==
<not executed>
